# email-to-calendar

./: .dockerignore  .gitignore  Dockerfile  README.md  compose-dev.yml  compose.yml  pyproject.toml  sample.env
.github/workflows/: ci-cd.yml  security.yml  sync.yml  trivy.yml
scripts/: lint.sh  update.sh
src/: __init__.py  db.py  main.py
src/events/: caldav.py
src/mail/: mail.py
src/model/: email.py  event.py
src/util/: ai.py  env.py  notifications.py  text.py
tests/: test_startup.py
