[project]
name = "email-to-calendar"
version = "0.1.0"
description = "Takes emails from an IMAP server, parses the body, and creates event(s) in a CalDAV calendar"
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "caldav==2.0.1",
    "pydantic-ai==1.0.2",
    "pydantic-settings==2.10.1",
    "pydantic[email]==2.11.7",
    "sqlalchemy==2.0.43",
    "tzlocal==5.3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]
