[project]
name = "email-to-calendar"
version = "0.1.0"
description = "Takes emails from an IMAP server, parses the body, and creates event(s) in a CalDAV calendar"
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "apprise==1.9.7",
    "caldav==2.2.6",
    "imapclient==3.1.0",
    "markdownify==1.2.2",
    "pydantic-ai-slim[openai]==1.61.0",
    "pydantic-settings==2.13.0",
    "pydantic[email]==2.12.5",
    "sqlmodel==0.0.34",
    "tzlocal==5.3.1",
    "vobject==0.9.9",
    "python-dotenv==1.2.1",
]
license-files = ["LICENSE"]
authors = [
    { name = "Jack Stockley", email = "jack@jstockley.com"}
]
keywords = ["starter", "template", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/jnstockley/python-starter"
Repository = "https://github.com/jnstockley/python-starter.git"
Issues = "https://github.com/jnstockley/python-starter/issues"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.13.2",
]
